--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.17",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.6",
     "object-to-xml": "^2.0.0",
     "shortid": "^2.2.15",
     "slugify": "^1.4.0",
     "string-strip-html": "^4.4.7",
     "xml": "^1.0.1"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7"
   }
 }
