--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "blog-engine",
-  "version": "1.0.0",
+  "name": "bloque",
+  "version": "1.0.1",
   "engines": {
     "node": "14.15.4",
     "npm": "6.14.10"
@@ -14,27 +14,33 @@
   "author": "Sujan Chhetri",
   "license": "MIT",
   "dependencies": {
-    "@sendgrid/mail": "^7.1.1",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
+    "@sendgrid/mail": "^7.7.0",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "dotenv": "^8.6.0",
+    "express": "^4.18.2",
     "express-jwt": "^5.3.3",
-    "express-validator": "^6.5.0",
+    "express-validator": "^6.15.0",
     "formidable": "^1.2.2",
     "google-auth-library": "^6.0.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.17",
+    "npm": "^10.1.0",
     "object-to-xml": "^2.0.0",
     "shortid": "^2.2.15",
-    "slugify": "^1.4.0",
-    "string-strip-html": "^4.4.7",
+    "slugify": "^1.6.6",
+    "string-strip-html": "^4.5.1",
     "xml": "^1.0.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "/Users/fm/Downloads/bloque"
   }
 }
