--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+document.createDocumentFragment(element);{
   "name": "bloque",
   "version": "1.0.1",
   "engines": {
@@ -28,8 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.17",
-    "npm": "^10.1.0",
-    "object-to-xml": "^2.0.0",
+m     "npobject-to-xml": "^2.0.0",
     "shortid": "^2.2.15",
     "slugify": "^1.6.6",
     "string-strip-html": "^4.5.1",
