--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 NODE_ENV=development
-APP_NAME=blog-engine
-CLIENT_URL=https://frontend.com
-DATABASE_CLOUD='mongodb://127.0.0.1:27017/local'
-JWT_SECRET=
-JWT_ACTIVATION=
+APP_NAME=bloque
+CLIENT_URL=
+DATABASE_CLOUD=
+JWT_SECRET=bloque
+JWT_ACTIVATION=bloque-key
 SENDGRID_API_KEY=
-JWT_RESET_PASSWORD=
+JWT_RESET_PASSWORD=bloque-reset
 GOOGLE_CLIENT_ID=
 
